# line-follower-robot

./: .bazelrc  .clang-format  .dazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  README.md  WORKSPACE  output.json  run.py  setup.cfg  test.sh
bazel/flags/agents/: BUILD.bazel
line_follower/blocks/dead_reckoning/: BUILD.bazel  dead_reckoning_interface.h  dead_reckoning_model.cpp  dead_reckoning_model.h
line_follower/blocks/dead_reckoning/test/: BUILD.bazel  test_dead_reckoning_model.cpp
line_follower/blocks/dead_reckoning/tests/: BUILD.bazel  test_dead_reckoning_model.cpp
line_follower/blocks/encoder/: BUILD.bazel  encoder_interface.h  encoder_model.cpp  encoder_model.h
line_follower/blocks/encoder/test/: BUILD.bazel  test_encoder_model.cpp
line_follower/blocks/geometry/: BUILD.bazel  conversion.h  euler_angles.h  line.h  quaternion.h  vector.h
line_follower/blocks/geometry/line_utils/: BUILD.bazel  line_utils.h
line_follower/blocks/geometry/tests/: BUILD.bazel  test_conversion.cpp  test_euler_angles.cpp  test_line.cpp  test_quaternion.cpp  test_vector.cpp
line_follower/blocks/geometry/utils/: BUILD.bazel  line_utils.h  rotation_utils.h
line_follower/blocks/geometry/utils/tests/: BUILD.bazel  test_line_utils.cpp  test_rotation_utils.cpp
line_follower/blocks/ir_sensor_array/: BUILD.bazel  ir_sensor_array_interface.h  ir_sensor_array_model.cpp  ir_sensor_array_model.h
line_follower/blocks/ir_sensor_array/tests/: BUILD.bazel  test_ir_sensor_array_model.cpp
line_follower/blocks/line_following/: BUILD.bazel  kalman_line_following_model.cpp  kalman_line_following_model.h  line_following_model.cpp  line_following_model.h  simple_line_following_model.cpp  simple_line_following_model.h
line_follower/blocks/line_following/test/: BUILD.bazel  test_line_following_model.cpp  test_simple_line_following_model.cpp
line_follower/blocks/motor/: BUILD.bazel  motor_interface.h  motor_model.cpp  motor_model.h
line_follower/blocks/motor/test/: BUILD.bazel  test_motor_model.cpp
line_follower/blocks/pid/: BUILD.bazel  pid.cpp  pid.h
line_follower/blocks/pid/test/: BUILD.bazel  test_pid.cpp
line_follower/blocks/utilities/: BUILD.bazel  calibration_loader.cpp  calibration_loader.h  event_logger.cpp  event_logger.h  json_conversion.cpp  json_conversion.h  should_exit.cpp  should_exit.h  track_loader.cpp  track_loader.h
line_follower/blocks/utilities/test/: BUILD.bazel  test_track_loader.cpp
line_follower/blocks/utilities/test/data/: invalid_no_initial_robot_pose.json  invalid_no_pose.json  invalid_no_track_lines.json  invalid_no_track_segments.json  multiple_track_lines.json  test_data.json
line_follower/deployment/arduino/ph0_line_follower/: BUILD.bazel  LineFollower.h  boards.txt  library.properties  ph0_line_follower.ino  platform.txt
line_follower/service_agents/common/: BUILD.bazel  common.h  logging.h
line_follower/service_agents/common/test/: BUILD.bazel  test_common.cpp
line_follower/service_agents/encoder/: BUILD.bazel  encoder_data_agent.h
line_follower/service_agents/encoder/hardware/: encoder_data_agent.cpp
line_follower/service_agents/encoder/hardware/interface/: hardware_encoder_interface.cpp  hardware_encoder_interface.h
line_follower/service_agents/encoder/simulation/: encoder_data_agent.cpp
line_follower/service_agents/encoder/simulation/test/: BUILD.bazel  test_encoder_data_agent_simulation.cpp
line_follower/service_agents/encoder/stub/: encoder_data_agent.cpp
line_follower/service_agents/event_logger/: BUILD.bazel
line_follower/service_agents/event_logger/simulation/: event_logger_agent.cpp
line_follower/service_agents/event_logger/stub/: event_logger_agent.cpp
line_follower/service_agents/ir_sensor_array/: BUILD.bazel  ir_sensor_array_data_agent.h
line_follower/service_agents/ir_sensor_array/hardware/: ir_sensor_array_data_agent.cpp
line_follower/service_agents/ir_sensor_array/hardware/interface/: hardware_ir_sensor_array_interface.cpp  hardware_ir_sensor_array_interface.h
line_follower/service_agents/ir_sensor_array/simulation/: ir_sensor_array_data_agent.cpp
line_follower/service_agents/ir_sensor_array/simulation/test/: BUILD.bazel  test_ir_sensor_array_data_agent_simulation.cpp
line_follower/service_agents/ir_sensor_array/stub/: ir_sensor_array_data_agent.cpp
line_follower/service_agents/line_following/: BUILD.bazel  line_following_agent.h
line_follower/service_agents/line_following/hardware/: line_following_agent.cpp
line_follower/service_agents/line_following/simulation/: line_following_agent.cpp
line_follower/service_agents/logging/: BUILD.bazel  logging_agent.h
line_follower/service_agents/logging/hardware/: logging_agent.cpp
line_follower/service_agents/logging/simulation/: logging_agent.cpp
line_follower/service_agents/logging/stub/: logging_agent.cpp
line_follower/service_agents/motor/: BUILD.bazel  motor_signal_agent.h
line_follower/service_agents/motor/hardware/: motor_signal_agent.cpp
line_follower/service_agents/motor/hardware/interface/: hardware_motor_interface.cpp  hardware_motor_interface.h
line_follower/service_agents/motor/simulation/: motor_signal_agent.cpp
line_follower/service_agents/motor/simulation/test/: BUILD.bazel  test_motor_signal_agent_simulation.cpp
line_follower/service_agents/motor/stub/: motor_signal_agent.cpp
line_follower/service_agents/scheduler/: BUILD.bazel  schedulable_base.h  scheduler_agent.h
line_follower/service_agents/scheduler/hardware/: scheduler_agent.cpp
line_follower/service_agents/scheduler/simulation/: scheduler_agent.cpp
line_follower/service_agents/scheduler/simulation/test/: BUILD.bazel  test_scheduler_agent_simulation.cpp
line_follower/service_agents/scheduler/stub/: scheduler_agent.cpp
line_follower/service_agents/time/: BUILD.bazel  time_agent.h
line_follower/service_agents/time/hardware/: time_agent.cpp
line_follower/service_agents/time/simulation/: simulation_clock.h  time_agent.cpp
line_follower/service_agents/time/simulation/test/: BUILD.bazel  (+1 more)
line_follower/service_agents/time/stub/: time_agent.cpp
(+2116 files in other folders)
