# Copyright (c) 2023 Henrik Söderlund

load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

string_flag(
    name = "agents",
    values = ["simulation", "hardware", "stub"],
    build_setting_default = "simulation",
)

config_setting(
    name = "simulation",
    flag_values = {":agents": "simulation"},
    visibility = ["//visibility:public"],
)

config_setting(
    name = "hardware",
    flag_values = {":agents": "hardware"},
    visibility = ["//visibility:public"],
)

config_setting(
    name = "stub",
    flag_values = {":agents": "stub"},
    visibility = ["//visibility:public"],
)
