# Copyright (c) 2023 Henrik Söderlund

cc_library(
    name = "encoder_model",
    srcs = ["encoder_model.cpp"],
    hdrs = ["encoder_model.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//line_follower/external/api:encoder_interface",
        "//line_follower/external/types",
    ],
)
