# Copyright (c) 2023 Henrik Söderlund

load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "encoder_model",
    srcs = ["encoder_model.cpp"],
    hdrs = ["encoder_model.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//line_follower/external/api:encoder_interface",
        "//line_follower/external/types",
    ],
)
