
cc_library(
    name = "vector",
    hdrs = ["vector.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "euler_angles",
    hdrs = ["euler_angles.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//line_follower/blocks/common",
    ],
)

cc_library(
    name = "quaternion",
    hdrs = ["quaternion.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":vector",
        ":euler_angles",
        "//line_follower/blocks/common",
    ],
)

cc_library(
    name = "line",
    hdrs = ["line.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":vector",
    ],
)

cc_library(
    name = "conversion",
    hdrs = ["conversion.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":line",
        ":vector",
        ":quaternion",
        "//line_follower/types",
    ],
)
