# Copyright (c) 2023 Henrik Söderlund

cc_library(
    name = "ir_sensor_array_model",
    srcs = ["ir_sensor_array_model.cpp"],
    hdrs = ["ir_sensor_array_model.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//line_follower/blocks/common",
        "//line_follower/blocks/geometry:conversion",
        "//line_follower/blocks/geometry:line",
        "//line_follower/blocks/geometry:quaternion",
        "//line_follower/blocks/geometry:vector",
        "//line_follower/blocks/geometry/utils:line_utils",
        "//line_follower/blocks/geometry/utils:rotation_utils",
        "//line_follower/external/api:ir_sensor_array_interface",
        "//line_follower/external/types",
    ],
)
