# Copyright (c) 2023 Henrik Söderlund

load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "motor_model",
    srcs = ["motor_model.cpp"],
    hdrs = ["motor_model.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//line_follower/blocks/common",
        "//line_follower/external/api:motor_interface",
        "//line_follower/external/types",
    ],
)
