# Copyright (c) 2023 Henrik Söderlund

filegroup(
    name = "headers",
    srcs = glob(["*.h"]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "pid",
    srcs = ["pid.cpp"],
    hdrs = ["pid.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//line_follower/external/types",
    ],
)
