cc_library(
    name = "track_loader",
    srcs = ["track_loader.cpp"],
    hdrs = ["track_loader.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//line_follower/external/api:logging_api",
        "//line_follower/external/types",
    ] + [
        "@com_github_nlohmann_json//:json",
    ],
)

cc_library(
    name = "should_exit",
    srcs = ["should_exit.cpp"],
    hdrs = ["should_exit.h"],
    visibility = ["//visibility:public"],
)
