# Copyright (c) 2023 Henrik Söderlund

cc_library(
    name = "common",
    hdrs = ["common.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//line_follower/blocks/common",
    ],
)

cc_library(
    name = "logging",
    hdrs = ["logging.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//line_follower/blocks/common",
        "//line_follower/service_agents/logging:logging_agent",
    ],
)
