# Copyright (c) 2023 Henrik Söderlund

cc_library(
    name = "encoder_data_agent_api",
    hdrs = ["encoder_data_agent.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//line_follower/blocks/encoder:encoder_interface",
        "//line_follower/service_agents/common",
        "//line_follower/service_agents/scheduler:scheduler_agent_api",
        "//line_follower/types",
    ],
)

cc_library(
    name = "encoder_data_agent_simulation",
    srcs = ["simulation/encoder_data_agent.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":encoder_data_agent_api",
        "//line_follower/blocks/encoder:encoder_model",
        "//line_follower/service_agents/common",
        "//line_follower/service_agents/common:logging",
        "//line_follower/service_agents/scheduler:schedulable_base",
        "//line_follower/service_agents/scheduler:scheduler_agent",
        "//line_follower/types",
    ],
)

cc_library(
    name = "encoder_data_agent_hardware",
    srcs = ["hardware/encoder_data_agent.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":encoder_data_agent_api",
        "//line_follower/service_agents/common",
        "//line_follower/service_agents/common:logging",
        "//line_follower/service_agents/scheduler:schedulable_base",
        "//line_follower/service_agents/scheduler:scheduler_agent",
        "//line_follower/types",
    ],
)

cc_library(
    name = "encoder_data_agent_stub",
    srcs = ["stub/encoder_data_agent.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":encoder_data_agent_api",
        "//line_follower/service_agents/common",
        "//line_follower/service_agents/common:logging",
        "//line_follower/service_agents/scheduler:scheduler_agent",
        "//line_follower/types",
    ],
)

alias(
    name = "encoder_data_agent",
    actual = select({
        "//bazel/flags/agents:simulation": ":encoder_data_agent_simulation",
        "//bazel/flags/agents:hardware": ":encoder_data_agent_hardware",
        "//bazel/flags/agents:stub": ":encoder_data_agent_stub",
        "//conditions:default": ":encoder_data_agent_simulation",
    }),
    visibility = ["//visibility:public"],
)
