# Copyright (c) 2023 Henrik Söderlund

cc_library(
    name = "encoder_data_agent_simulation",
    srcs = ["simulation/encoder_data_agent.cpp"],
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/blocks/encoder:encoder_model",
        "//line_follower/external/api:common",
        "//line_follower/external/api:encoder_data_agent_api",
        "//line_follower/external/api:logging_api",
        "//line_follower/external/types",
        "//line_follower/service_agents/scheduler:schedulable_base",
        "//line_follower/service_agents/scheduler:scheduler_agent",
    ],
)

cc_library(
    name = "encoder_data_agent_hardware",
    srcs = ["hardware/encoder_data_agent.cpp"],
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/external/api:common",
        "//line_follower/external/api:encoder_data_agent_api",
        "//line_follower/external/api:logging_api",
        "//line_follower/external/types",
        "//line_follower/service_agents/scheduler:schedulable_base",
        "//line_follower/service_agents/scheduler:scheduler_agent",
    ],
)

cc_library(
    name = "encoder_data_agent_stub",
    srcs = ["stub/encoder_data_agent.cpp"],
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/external/api:common",
        "//line_follower/external/api:encoder_data_agent_api",
        "//line_follower/external/api:logging_api",
        "//line_follower/external/types",
        "//line_follower/service_agents/scheduler:scheduler_agent",
    ],
)

alias(
    name = "encoder_data_agent",
    actual = select({
        "//bazel/flags/agents:simulation": ":encoder_data_agent_simulation",
        "//bazel/flags/agents:hardware": ":encoder_data_agent_hardware",
        "//bazel/flags/agents:stub": ":encoder_data_agent_stub",
        "//conditions:default": ":encoder_data_agent_simulation",
    }),
    visibility = ["//visibility:public"],
)
