# Copyright (c) 2023 Henrik Söderlund

cc_library(
    name = "ir_sensor_array_data_agent_simulation",
    srcs = ["simulation/ir_sensor_array_data_agent.cpp"],
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/blocks/ir_sensor_array:ir_sensor_array_model",
        "//line_follower/external/api:common",
        "//line_follower/external/api:ir_sensor_array_data_agent_api",
        "//line_follower/external/api:logging_api",
        "//line_follower/external/types",
        "//line_follower/service_agents/scheduler:schedulable_base",
        "//line_follower/service_agents/scheduler:scheduler_agent",
        "//line_follower/service_agents/time:time_agent",
    ],
)

cc_library(
    name = "ir_sensor_array_data_agent_hardware",
    srcs = [
        "hardware/interface/hardware_ir_sensor_array_interface.cpp",
        "hardware/ir_sensor_array_data_agent.cpp",
    ],
    hdrs = ["hardware/interface/hardware_ir_sensor_array_interface.h"],
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/deployment/arduino:api",
        "//line_follower/external/api:common",
        "//line_follower/external/api:ir_sensor_array_data_agent_api",
        "//line_follower/external/api:ir_sensor_array_interface",
        "//line_follower/external/api:logging_api",
        "//line_follower/external/types",
        "//line_follower/service_agents/scheduler:schedulable_base",
        "//line_follower/service_agents/scheduler:scheduler_agent",
        "//line_follower/service_agents/time:time_agent",
    ],
)

cc_library(
    name = "ir_sensor_array_data_agent_stub",
    srcs = ["stub/ir_sensor_array_data_agent.cpp"],
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/external/api:common",
        "//line_follower/external/api:ir_sensor_array_data_agent_api",
        "//line_follower/external/api:logging_api",
        "//line_follower/external/types",
        "//line_follower/service_agents/scheduler:scheduler_agent",
    ],
)

alias(
    name = "ir_sensor_array_data_agent",
    actual = select({
        "//bazel/flags/agents:simulation": ":ir_sensor_array_data_agent_simulation",
        "//bazel/flags/agents:hardware": ":ir_sensor_array_data_agent_hardware",
        "//bazel/flags/agents:stub": ":ir_sensor_array_data_agent_stub",
        "//conditions:default": ":ir_sensor_array_data_agent_simulation",
    }),
    visibility = ["//visibility:public"],
)
