# Copyright (c) 2023 Henrik Söderlund

cc_library(
    name = "line_following_agent_simulation",
    srcs = ["simulation/line_following_agent.cpp"],
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/blocks/dead_reckoning:dead_reckoning_model",
        "//line_follower/blocks/geometry:conversion",
        "//line_follower/blocks/geometry:quaternion",
        "//line_follower/blocks/geometry:vector",
        "//line_follower/blocks/geometry/utils:rotation_utils",
        "//line_follower/blocks/line_following:simple_line_following_model",
        "//line_follower/blocks/robot_geometry",
        "//line_follower/external/api:line_following_agent_api",
        "//line_follower/external/api:line_following_interface",
        "//line_follower/external/api:logging_api",
        "//line_follower/service_agents/ir_sensor_array:ir_sensor_array_data_agent",
        "//line_follower/service_agents/motor:motor_signal_agent",
    ],
)

cc_library(
    name = "line_following_agent_hardware",
    srcs = ["hardware/line_following_agent.cpp"],
    linkstatic = True,
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/blocks/dead_reckoning:dead_reckoning_model",
        "//line_follower/blocks/geometry:conversion",
        "//line_follower/blocks/geometry:quaternion",
        "//line_follower/blocks/geometry:vector",
        "//line_follower/blocks/geometry/utils:rotation_utils",
        "//line_follower/blocks/line_following:simple_line_following_model",
        "//line_follower/blocks/robot_geometry",
        "//line_follower/external/api:line_following_agent_api",
        "//line_follower/external/api:line_following_interface",
        "//line_follower/external/api:logging_api",
        "//line_follower/service_agents/ir_sensor_array:ir_sensor_array_data_agent",
        "//line_follower/service_agents/motor:motor_signal_agent",
    ],
)

alias(
    name = "line_following_agent",
    actual = select({
        "//bazel/flags/agents:simulation": ":line_following_agent_simulation",
        "//bazel/flags/agents:hardware": ":line_following_agent_hardware",
        "//bazel/flags/agents:stub": ":line_following_agent_simulation",
        "//conditions:default": ":line_following_agent_simulation",
    }),
    visibility = ["//visibility:public"],
)
