# Copyright (c) 2023 Henrik Söderlund

cc_library(
    name = "logging_agent_simulation",
    srcs = ["simulation/logging_agent.cpp"],
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/external/api:logging_agent_api",
        "//line_follower/external/types",
        "//line_follower/service_agents/scheduler:schedulable_base",
        "//line_follower/service_agents/scheduler:scheduler_agent",
        "//line_follower/service_agents/time:time_agent",
    ],
)

cc_library(
    name = "logging_agent_hardware",
    srcs = ["hardware/logging_agent.cpp"],
    visibility = ["__subpackages__"],
    deps = [
        "//line_follower/deployment/arduino:api",
        "//line_follower/external/api:logging_agent_api",
        "//line_follower/external/types",
        "//line_follower/service_agents/scheduler:schedulable_base",
        "//line_follower/service_agents/scheduler:scheduler_agent",
        "//line_follower/service_agents/time:time_agent",
    ],
)

alias(
    name = "logging_agent",
    actual = select({
        "//bazel/flags/agents:simulation": ":logging_agent_simulation",
        "//bazel/flags/agents:hardware": ":logging_agent_hardware",
        "//bazel/flags/agents:stub": ":logging_agent_simulation",
        "//conditions:default": ":logging_agent_simulation",
    }),
    visibility = ["//visibility:public"],
)
