# Copyright (c) 2023 Henrik Söderlund

cc_library(
    name = "motor_signal_agent_api",
    hdrs = ["motor_signal_agent.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//line_follower/blocks/motor:motor_interface",
        "//line_follower/service_agents/common",
        "//line_follower/types",
    ],
)

cc_library(
    name = "motor_signal_agent_simulation",
    srcs = ["simulation/motor_signal_agent.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":motor_signal_agent_api",
        "//line_follower/blocks/motor:motor_model",
        "//line_follower/service_agents/common",
        "//line_follower/types",
    ],
)

cc_library(
    name = "motor_signal_agent_hardware",
    srcs = ["hardware/motor_signal_agent.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":motor_signal_agent_api",
        "//line_follower/service_agents/common",
        "//line_follower/types",
    ],
)

cc_library(
    name = "motor_signal_agent_stub",
    srcs = ["stub/motor_signal_agent.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":motor_signal_agent_api",
        "//line_follower/service_agents/common",
        "//line_follower/types",
    ],
)

alias(
    name = "motor_signal_agent",
    actual = select({
        "//bazel/flags/agents:simulation": ":motor_signal_agent_simulation",
        "//bazel/flags/agents:hardware": ":motor_signal_agent_hardware",
        "//bazel/flags/agents:stub": ":motor_signal_agent_stub",
        "//conditions:default": ":motor_signal_agent_simulation",
    }),
    visibility = ["//visibility:public"],
)
